Change header to fixed to fix header not staying visible when scrolling

--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 24px;
+  padding-bottom: 24px;
 }
 
 .cart-header {
