--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -4,7 +4,4 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 42px;
-  padding-left: var(--horizontal-spacing);
-  padding-right: var(--horizontal-spacing);
-  margin-top: 24px;
 }
