--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,11 +19,6 @@
   src: url("../fonts/Montserrat-Bold.ttf");
 }
 
-h1,
-h2 {
-  font-family: "Montserrat-Bold", sans-serif;
-}
-
 body {
   font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -31,7 +26,8 @@ body {
   --blue: rgb(0, 88, 171);
   --disabled-blue: rgba(0, 88, 171, 0.4);
   --yellow: rgb(251, 217, 20);
-  --horizontal-spacing: 28px;
+  --page-padding: 28px;
+  --header-height: 75px;
   height: 100vh;
 }
 
@@ -40,6 +36,11 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+h1,
+h2 {
+  font-family: "Montserrat-Bold", sans-serif;
 }
 
 code {
@@ -60,4 +61,10 @@ button {
 
 li {
   list-style-type: none;
+}
+
+.cart,
+.shop {
+  padding: var(--page-padding);
+  margin-top: var(--header-height);
 }
